# project

./: .gitignore  Readme.md  flake.nix
c/: Makefile  Readme.md  flake.nix
c/lib/: lib.c  lib.h  lib2.c
c/src/: main.c
haskell/: Readme.md  flake.nix  project-name.cabal
haskell/app/: Main.hs
haskell/src/: ProjectName.hs
rust/: Cargo.toml  Readme.md  flake.nix
rust/src/: lib.rs
