cabal-version:      3.4
name:               project-name
version:            0.1.0
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             6e6f61
maintainer:         109554668+6e6f61@users.noreply.github.com

common warnings
    ghc-options: -Wall

library
    import:          warnings
    hs-source-dirs:   src
    default-language: Haskell2010

    exposed-modules: ProjectName
    build-depends:
        base ^>=4.16.4.0

executable project-name
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010

    build-depends:
        base ^>=4.16.4.0,
        project-name